--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "sass": "^1.55.0",
-    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.6.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
