--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "chart.js": "^3.9.1",
+    "firebase": "^9.12.1",
+    "firebase-messaging": "^1.0.6",
     "framer-motion": "^7.6.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
